[package]
name = "redis-starter-rust"
version = "0.1.0"
authors = ["Evan Gabrielson <ejgabrie@usc.edu>"]
edition = "2024"

[dependencies]
atoi = "2.0.0"                                      # integer conversion
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
